@@ -158,6 +158,7 @@ Copyright: Bernhard Schmidt <berni@debian.org>
            Matthias Urlichs <smurf@debian.org>
            Peter Eisentraut <petere@debian.org>
            Kurt Roeckx <kurt@roeckx.be>
+           2017 Dimitri John Ledkov <xnox@ubuntu.com>
            2016-2018 Richard Laager <rlaager@wiktel.com>
 License: NTP
 
