@@ -1,7 +1,5 @@
 #!/bin/sh
 
-old_ntp_servers="unknown and invalid"
-new_ntp_servers=$DHCP4_NTP_SERVERS
 case "$2" in
 	up|vpn-up) reason=BOUND; ;;
 	down|vpn-down) reason=RELEASE; ;;
