@@ -1,0 +1,4 @@
+[Service]
+Environment=reason=BOUND
+ExecStart=/bin/sh -c '. /etc/dhcp/dhclient-exit-hooks.d/ntp'
+
